vlib/v/checker/tests/method_call_with_empty_struct_init.out
vlib/v/checker/tests/method_call_with_empty_struct_init.vv:10:11: error: `{}` can not be used for initialising empty structs any more. Use `Abc{}` instead.
    8 | fn main() {
    9 |     s := Abc{}
   10 |     s.abc(0, {})
      |              ~~
   11 | }
